fix(index): disabled scrollbar

--- a/public/css/style.sass
+++ b/public/css/style.sass
@@ -11,6 +11,9 @@ html, body
 a[href]
   color: rgba(0,0,0,0.0)
 
+.ok 
+ overflow-y: hidden
+
 /* some css in .alt & .alt-main is from kxtz
 
 .alt
